# RustlingAI

./: .gitignore  Cargo.toml  README.md  Trunk.toml  docker-compose.yml  index.html
src/: api.rs  constants.rs  google_api.rs  main.rs  store.rs  utils.rs
src/components/: api_popup.rs  icons.rs  import_export_chat.rs  language_selector.rs  mobile_bar.rs  mod.rs  popup_modal.rs  search_bar.rs  share_gpt.rs  stop_gen_btn.rs  toast.rs  toggle.rs  token_count.rs  trans.rs
src/components/chat/: avatar.rs  button.rs  code_block.rs  command_prompt.rs  config_menu.rs  content_view.rs  edit_view.rs  markdown.rs  message.rs  mod.rs  role_selector.rs
src/components/menu/: about.rs  api.rs  chat_config.rs  chat_folder.rs  chat_histories.rs  chat_history.rs  chat_search.rs  menu_options.rs  mod.rs  prompt_library.rs  settings.rs
src/components/menu/chat/: config.rs  folder.rs  histories.rs  history.rs  mod.rs
src/hooks/: add_chat.rs  hide_on_outside.rs  initialise_chat.rs  mod.rs  save_to_local.rs  submit.rs  translation.rs
src/store/: mod.rs
src/types/: api.rs  chat.rs  export.rs  mod.rs
