[package]
name = "YewMind"
version = "0.1.0"
edition = "2024"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]

[dependencies]
yew = "0.21.0"
yew-router = "0.18.0"
wasm-bindgen = "0.2.100"
# wasm-bindgen-futures = "0.4.50"
yew-hooks = "0.3.3"
stylist = { version = "0.13.0", features = ["yew_integration"] }
gloo = "0.11.0"
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.4"
regex = "1.11.1"
lazy_static = "1.5.0"
itertools = "0.14.0"
thiserror = "2.0.12"
anyhow = "1.0.96"
reqwest = { version = "0.12.14", features = ["json"] }
url = "2.5.3"
sha2 = "0.10"
split-iter = "0.1"
yewdux = "0.11.0"
pulldown-cmark = "0.13.0"
log = "0.4.26"
chrono = "0.4.40"
rust-i18n = "3"
uuid = "*"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlTextAreaElement", "HtmlElement", "HtmlAnchorElement"]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
